feat: ban/update user api
